[package]
name = "jjoner_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5.7"
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
chrono = { version = "0.4.31", features = [] }
rand = { version = "0.8.5", features = [] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = { version = "1.0.111", features = [] }
